--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,38 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: lightsteelblue;
+}
+
+header {
+    background-color: darkslateblue;
+    color: white;
+    height: 3em;
+}
+
+.drop-title {
+    margin: 0;
+    padding: 5px 0;
+}
+
+.drop-list {
+    list-style-type: none;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 0;
+}
+
+.drop-list > li {
+    z-index: 1;
+    padding: 4px 4px 4px 40px;
+    font-size: 1.2em;
+}
+
+.drop-list > li:nth-child(odd) {
+    background-color: slateblue;
+}
+
+.drop-list > li:nth-child(even) {
+    background-color: darkslateblue;
 }
