--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ header {
     flex-direction: column;
     align-items: flex-start;
     padding-left: 0;
+    visibility: hidden;
 }
 
 .drop-list > li {
